<resources>
    <string name="app_name">Shafa Tasnim</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged">lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="rp_100_000_20_kg">Rp.100.000/20 kg</string>
    <string name="_18_photo">18 photo</string>
    <string name="_harga">Rp. 17.000/Kg</string>
    <string name="deskripsi">adalah salah satu jenis sayuran yang banyak dijual di pasaran dengan harga relatif murah. Kendati harganya murah,
        tomat padat nutrisi dan bermanfaat bagi kesehatan.
        Kandungan tomat dipercaya mampu mencegah berbagai masalah kesehatan seperti penyakit jantung,
        kulit, hingga diabetes. Selain itu, tomat bisa dikonsumsi bagi mereka yang ingin menurunkan berat badan.
        Tomat mengandung senyawa karotenoid tinggi termasuk lutein dan likopen. Kandungan-kandungan
        tersebut sangat penting bagi kesehatan mata supaya tidak mudah rabun</string>
    <string name="_9_photo">9 Photo</string>
    <string name="todo">TODO</string>
    <string name="manfaat01">Manfaat 1 </string>
    <string name="manfaat1">Tomat termasuk jenis buah yang memiliki karbohidrat
        rendah, yaitu sekitar 4 gram dalam setiap 100 gram tomat. Sebuah penelitian
        pun mengungkapkan bahwa rutin mengonsumsi tomat dapat
        membantu mengurangi risiko penyakit jantung dan pembuluh
        darah yang terkait dengan penyaki</string>

    <string name="manfaat02">Manfaat 2</string>
    <string name="manfaat2">Manfat jus tomat lainnya diduga mampu mengurangi kolesterol
        jahat sebanyak 10 persen. Syaratnya, cukup dengan mengonsumsi 25 miligram likopen per
        hari, atau setara dengan 2 cangkir jus tomat. Untuk meningkatkan jumlah likopen, Anda
        bisa menumis tomat terlebih dahulu sebelum dibuat jus tomat.</string>

    <string name="manfaat03">Manfaat 3</string>
    <string name="manfaat3">Setidaknya, pria yang mengonsumsi 10 porsi tomat atau lebih dalam
        seminggu diduga mampu memangkas risiko terkena kanker prostat hingga 18 persen.
        Hal ini diperkirakan karena likopen adalah antioksidan yang melindungi sel dari
        kerusakan. Namun, pastikan juga untuk menjalani gaya hidup sehat,
        seperti olahraga secara teratur dan hentikan kebiasaan merokok.</string>
    <string name="troli">Add To Cart</string>

</resources>