<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/tomat"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4D000000"
                android:text="@string/_9_photo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="bottom"
                android:textColor="#fff"
                app:drawableStartCompat="@android:drawable/ic_menu_gallery"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="#c70039"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/_harga"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/deskripsi" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessLeaf" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manfaat01"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manfaat1" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessLeaf" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manfaat02"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manfaat1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            tools:ignore="UselessLeaf" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manfaat03"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manfaat3" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="end"
        android:paddingBottom="8dp"
        tools:ignore="UselessLeaf" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="#00BCD4"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:drawingCacheQuality="high"
            android:isScrollContainer="false"
            android:text="@string/troli"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>
